# simulador_mundial

./: README.md  arquitectura_simulador_mundial.md  home_advantage_by_venue.json  iniciar.bat  pyproject.toml  test_inplay.py  test_jump.py  test_jump2.py  test_jump3.py  test_jump4.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  api.js  flagMap.js  index.css  utils.jsx
scratch/: World.tsv  apply_dates.py  calibrate_poisson.py  check_annex.py  check_r16.py  check_r32.py  check_rest.py  down.py  exact_schedule.py  extract_venues.py  fast_grid.py  find_495.py  find_elo.py  find_missing.py  fix_dates.py  fix_knockouts.py  gen_hardcoded.py  get_104.py  get_table_clean.py  get_tables.py  grid_search.py  hardcoded_list.txt  inject_venues.py  inspect_wiki.py  map_dates.py  parse.py  parse2.py  parse3.py  parse5.py  parse_combinations.py  print_108.py  print_md2.py  prueba_scrape.py  r32_new.py  ratings.js  regen_annex.py  rewrite_knockout_dates.py  rewrite_r32.py  rewrite_schedule.py  schedule_dates.py  (+10 more)
scripts/: generate_annex_c.py
src/worldcup_sim/: cli.py  config.py
storage/: 2026_results.tsv  latest.tsv  live_results.json  scratch_elo.py
storage/cache/: elo.sqlite
storage/history/: latest_hash.txt  snapshot_2026-06-12_140454.json  snapshot_2026-06-13_092701.json  snapshot_2026-06-13_093658.json  snapshot_2026-06-14_122935.json  snapshot_2026-06-14_124653.json  (+7 more)
tests/: test_bracket_builder.py  test_elo.py  test_group_simulator.py  test_hfa.py  test_match_simulator.py  test_scraper.py  test_tournament.py
(+51 files in other folders)
