[project]
name = "worldcup-sim"
version = "0.1.0"
description = "Simulador probabilístico del Mundial FIFA 2026"
requires-python = ">=3.12"
readme = "README.md"

dependencies = [
    # Core numérico
    "numpy>=2.0",
    "scipy>=1.13",              # Distribuciones, optimización
    "pandas>=2.2",              # Output/agregaciones
    "numba>=0.60",              # JIT para el hot-loop (opcional)

    # Scraping
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "lxml>=5.2",
    "tenacity>=9.0",            # Retries con backoff

    # Modelado/validación
    "pydantic>=2.8",
    "pydantic-settings>=2.0",   # Por si acaso para config.py

    # API (para el frontend)
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",

    # Persistencia
    "sqlite-utils>=3.37",       # Wrapper cómodo sobre SQLite

    # Utilidades
    "typer>=0.12",              # CLI
    "rich>=13.7",               # Logs y tablas bonitas
    "python-dotenv>=1.0",
    "tqdm>=4.66",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-cov>=5.0",
    "hypothesis>=6.110",         # Property-based testing (vital aquí)
    "ruff>=0.6",
    "mypy>=1.11",
    "ipython>=8.26",
]

[project.scripts]
worldcup-sim = "worldcup_sim.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/worldcup_sim"]
